--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body, html {
 #map {
   width: 100%;
   height: 50vh;
-  min-height: 300px;
+  min-height: 500px;
 }
 
 .container {
@@ -21,10 +21,8 @@ h1 {
   margin-bottom: 1rem;
 }
 
-p {
-  font-size: 1.1rem;
-  color: #666;
-  line-height: 1.5;
+h3 {
+  font-size: 1.5rem;
 }
 
 .roadmap {
@@ -48,4 +46,39 @@ p {
   .roadmap-feature {
     flex: 0 0 100%;
   }
+}
+
+.tooltip {
+  position: relative;
+  display: inline-block;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 100px; /* Adjust the width of the tooltip here */
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 8px;
+  border-radius: 4px;
+  font-size: 12px; /* Adjust the font size of the tooltip here */
+
+  /* Positioning and transitions */
+  position: absolute;
+  z-index: 1;
+  bottom: 125%; /* Adjust the position of the tooltip here */
+  left: 50%;
+  margin-left: -100px;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
+}
+
+.mapboxgl-popup-content {
+  font-size: 12px !important;
+  max-width: 100% !important;
 }
